# vendor-fabric

./: .gitignore  .release-please-manifest.json  AGENTIC_REINFORCEMENT.md  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECRETS_SYNC_ALIGNMENT.md  pyproject.toml  release-please-config.json  tox.ini
.agent-state/: directive.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  cd.yml  ci.yml  release.yml
docs/: architecture.rst  conf.py  index.md  index.rst  ownership-map.md  ownership-map.rst  pillars.rst  testing.rst
docs/_static/: vendor-fabric.css
docs/agentic/: architecture.md  development.md  getting-started.md  index.md  integrations.md  ownership-map.md
docs/api/: index.rst  internal.rst
docs/integrations/: connectors.md  connectors.rst
docs/secrets-sync/: index.md  index.rst
examples/: README.md  basic_aws.py  basic_google.py  basic_meshy.py  langchain_tools.py  mcp_server.py
src/cloud_connectors/: __init__.py  _optional.py  ai_tools.py  base.py  cli.py  cloud_params.py  connectors.py  mcp.py  registry.py
src/cloud_connectors/anthropic/: __init__.py  tools.py
src/cloud_connectors/aws/: __init__.py  codedeploy.py  organizations.py  s3.py  sso.py  tools.py
src/cloud_connectors/cursor/: __init__.py  tools.py
src/cloud_connectors/github/: __init__.py  _diagnostics.py  tools.py
src/cloud_connectors/google/: __init__.py  billing.py  cloud.py  jules.py  services.py  tools.py  workspace.py
src/cloud_connectors/meshy/: README.md  __init__.py  animate.py  base.py  connector.py  image3d.py  jobs.py  logging.py  mcp.py  models.py  retexture.py  rigging.py  text3d.py  tools.py
src/cloud_connectors/meshy/persistence/: __init__.py  repository.py  vector_store.py
src/cloud_connectors/meshy/webhooks/: __init__.py  handler.py  schemas.py
src/cloud_connectors/slack/: __init__.py  tools.py
src/cloud_connectors/vault/: __init__.py  tools.py
src/cloud_connectors/zoom/: __init__.py  tools.py
src/vendor_fabric/: __init__.py  _optional.py  base.py  cli.py  cloud_params.py  mcp.py  surface.py
src/vendor_fabric/agentic/: __init__.py  __main__.py  crew.py  main.py  run_flow.py
src/vendor_fabric/agentic/base/: __init__.py
src/vendor_fabric/agentic/config/: __init__.py  llm.py
src/vendor_fabric/agentic/core/: __init__.py  decomposer.py  discovery.py  loader.py  manager.py  runner.py
src/vendor_fabric/agentic/crews/connector_builder/: __init__.py  connector_builder_crew.py
src/vendor_fabric/agentic/crews/connector_builder/config/: agents.yaml  tasks.yaml
src/vendor_fabric/agentic/runners/: __init__.py  base.py  crewai_runner.py  langgraph_runner.py  local_cli_profiles.yaml  local_cli_runner.py  single_agent_runner.py  strands_runner.py
src/vendor_fabric/agentic/tools/: __init__.py  adapters.py  file_tools.py  registry.py  scraping_tools.py
src/vendor_fabric/agentic/utils/: __init__.py  files.py
src/vendor_fabric/anthropic/: __init__.py  tools.py
src/vendor_fabric/aws/: __init__.py  codedeploy.py  organizations.py  s3.py  sso.py  tools.py
src/vendor_fabric/cursor/: __init__.py  tools.py
src/vendor_fabric/github/: __init__.py
src/vendor_fabric/google/: _diagnostics.py  cloud.py  jules.py  services.py  workspace.py
src/vendor_fabric/meshy/: README.md  __init__.py  animate.py  animations.py  image3d.py  jobs.py  logging.py  mcp.py  rigging.py  tools.py
src/vendor_fabric/meshy/persistence/: __init__.py  repository.py
src/vendor_fabric/secrets_sync/: __init__.py  __main__.py  cli.py  deepmerge.py  files.py  graph.py  models.py  pipeline.py  stores.py
src/vendor_fabric/slack/: __init__.py  tools.py
src/vendor_fabric/vault/: __init__.py  tools.py
src/vendor_fabric/zoom/: tools.py
tests/: conftest.py  test_ai_tools.py  test_anthropic.py  test_anthropic_tools.py  test_aws_codedeploy.py  test_aws_connector.py  test_aws_organizations.py  test_aws_s3.py  test_aws_sso.py  test_aws_tools.py  test_base.py  test_cli.py  test_cloud_params.py  test_connector_payload_contracts.py  test_connectors.py  test_cursor.py  test_cursor_tools.py  test_github_connector.py  test_github_payload_contract.py  test_github_tools.py  test_github_workflow_builder.py  test_google_activity.py  test_google_billing.py  test_google_cloud.py  test_google_connector.py  test_google_jules.py  test_google_services.py  test_google_tools.py  test_google_workspace.py  test_mcp.py  test_optional_dependencies.py  test_slack_connector.py  test_slack_tools.py  test_tool_framework_adapters.py  test_tool_frameworks.py  test_tool_payload_contracts.py  test_vault_connector.py  test_vault_tools.py  test_zoom_connector.py  test_zoom_tools.py
tests/agentic/: conftest.py  test_cli_smoke.py  test_connector_builder_crew.py  test_decomposer_edge_cases.py  test_discovery.py  test_discovery_nested.py  test_file_tools.py  test_loader.py  test_manager.py  test_package_metadata.py  test_runners.py  test_scraping_tools.py  test_secrets_sync_tools.py  test_single_agent_runners.py  test_tool_adapters.py  test_tool_registry.py  test_yaml_config_errors.py
tests/agentic/e2e/: README.md  __init__.py  conftest.py  test_crewai_e2e.py  test_langgraph_e2e.py  test_strands_e2e.py
tests/e2e/: conftest.py
tests/e2e/meshy/: conftest.py  runners.py  test_crewai.py  test_langchain.py  test_strands.py
tests/e2e/meshy/cassettes/: TestCrewAIE2E.test_crewai_agent_generates_3d_model.yaml  TestLangChainE2E.test_langchain_agent_generates_3d_model.yaml  TestLangChainE2E.test_langchain_agent_lists_animations.yaml
tests/e2e/meshy/fixtures/models/: crewai_a_wooden_medieval_sh_019afb37-417e-767d-a55b-dcd177fc1b39.glb  langchain_a_simple_wooden_swor_019afb32-7a32-75cd-816f-84b257d56a19.glb
tests/meshy/: conftest.py  test_animations.py  test_jobs.py  test_meshy_base.py  test_meshy_logging.py  test_meshy_mcp.py  test_models.py  test_repository.py  test_task_ids.py  test_tools.py  test_vector_store.py  test_webhooks.py
tests/secrets_sync/: test_pipeline.py
