[project]
name = "vendor-fabric-workspace"
version = "0.0.0"
description = "Workspace for vendor-fabric runtime and pytest support packages"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/vendor-fabric",
    "packages/pytest-vendor-fabric",
]

[tool.uv.sources]
vendor-fabric = { workspace = true }
pytest-vendor-fabric = { workspace = true }

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = [
    "packages/vendor-fabric/tests",
    "packages/pytest-vendor-fabric/tests",
]
xfail_strict = true
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
markers = [
    "crewai: tests that require CrewAI runtime dependencies",
    "e2e: end-to-end tests that require external runtime dependencies",
    "langchain: tests that require LangChain runtime dependencies",
    "langgraph: tests that require LangGraph runtime dependencies",
    "strands: tests that require Strands runtime dependencies",
    "vcr: tests that use recorded HTTP cassettes",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "vendor_fabric",
    "pytest_vendor_fabric",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = [
    "packages/vendor-fabric/src",
    "packages/vendor-fabric/tests",
    "packages/vendor-fabric/examples",
    "packages/pytest-vendor-fabric/src",
    "packages/pytest-vendor-fabric/tests",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE001",
    "C901",
    "COM",
    "D105",
    "D205",
    "D415",
    "D417",
    "DTZ007",
    "E402",
    "E501",
    "EM",
    "ERA001",
    "FBT",
    "FIX",
    "G",
    "PERF",
    "PLC0415",
    "PLR0124",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "PTH",
    "RET505",
    "RUF012",
    "S105",
    "S110",
    "S310",
    "S603",
    "SLF001",
    "TCH",
    "TD",
    "TID252",
    "TRY003",
    "TRY300",
    "TRY301",
    "TRY401",
]

[tool.ruff.lint.per-file-ignores]
"packages/vendor-fabric/tests/**" = ["B018", "BLE", "D", "DTZ", "INP001", "LOG001", "N802", "N803", "N806", "PLC0415", "PT", "S", "SIM117", "TRY"]
"packages/vendor-fabric/examples/**" = ["D", "EXE001", "INP001", "S110", "SIM105", "T201"]
"packages/vendor-fabric/src/vendor_fabric/**" = ["D101", "D102", "D107"]
"packages/pytest-vendor-fabric/tests/**" = ["D", "PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
warn_return_any = false
exclude = [
    "packages/vendor-fabric/tests/e2e/.*",
    "packages/vendor-fabric/tests/.*/conftest.py",
    "packages/pytest-vendor-fabric/tests/.*",
]
